2006-10-01  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* PATCHLEVEL: Changed to rc1 for first release candidate.

	* VERSION: Changed to version 4.2.

2006-10-01  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* configure.in (AC_INIT, AM_INIT_AUTOMAKE, AC_CONFIG_SRCDIR):
	Changed to allow automake version to be checked.  Avoid annoyingly
	frequent problems from CVS users who just have too ancient
	automakes, but only detect that by showing us obscure error
	messages.  Required automake may have to be increased still.
	
2006-09-28  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/wxt_plot.h: Fix compilation on Windows, where syscfg.h
	has to be included for TBOOLEAN to be defined in wtext.c

2006-09-26  Juergen Wieferink  <wieferink@freenet.de>

	* src/graphics.c (plot_betweencurves): If the input file contains a
	blank line, terminate current filled area and start a new one.
	Unfortunately it is not currently possible to distinguish between a
	blank line and an invalid/missing coordinate.

	* src/plot2d.c (get_data): Add comments to document the problem of
	distinguishing a blank line from an invalid data point. (EAM)

	Bug #1563430

2006-09-24  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/faq-ja.tex: Sync Japanese documentation,
	SF Patch [1519215].

2006-09-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/pm3d.c (set_plot_with_palette): It used to be that all plots
	needing a colorbox had pm3d_color.type == TC_DEFAULT.  This is no
	longer true, so add a more specific check on whether a colorbox is
	needed.  Bugfix.

2006-09-23  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/wxt_gui.cpp (wxtPanel::OnSize): Clean floating-point
	comparison nonsense.

2006-09-22  Juergen Wieferink  <wieferink@freenet.de>

	* term/post.trm (PS_vector): To avoid accummulated error in a long
	series of relative moves or draws, we were issuing a "stroke" command