@@ -172,15 +172,15 @@ If PATTERN is omitted, it defaults to \"[ \\f\\t\\n\\r\\v]+\"."
 
             An Interactive Plotting Program
              Thomas Williams & Colin Kelley
-          Version 4.1 organized by: Hans-Bernhard Broeker
+          Version 4.2 organized by: Hans-Bernhard Broeker
 
  Copyright (C) 1986 - 1993, 1998, 2004   Thomas Williams, Colin Kelley
 
        Mailing list for comments: gnuplot-info@@lists.sourceforge.net
      Mailing list for bug reports: gnuplot-bugs@@lists.sourceforge.net
 
-         This manual was prepared by Dick Crawford
-                   3 December 1998
+         This manual was originally prepared by Dick Crawford
+                   Version 4.2 - 1 Oct 2006
 
 
 Major contributors (alphabetic order):
